--- a/style.css
+++ b/style.css
@@ -42,13 +42,29 @@
 
 .footerBox {
   display: flex;
-  position: absolute;
+  position: fixed;
   width: 100%;
   bottom: 0;
   text-align: center;
   justify-content: center;
+  background-color: white;
 }
 
 #footerText {
   text-align: center;
+}
+
+#mainBodyDiv {
+  padding: 2px 16px;
+  border: 1px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  font-family: Verdana,sans-serif;
+}
+
+#mainBodyDiv:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
