--- a/style.css
+++ b/style.css
@@ -42,13 +42,29 @@
 }
 
 .footerBox {
-  display: none;
+  display: flex;
+  flex-direction: row;
   position: fixed;
+  border: 1px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  font-family: Verdana,sans-serif;
   width: 100%;
+  height: 50px;
+  left: 0;
   bottom: 0;
   text-align: center;
   justify-content: center;
-  background-color: white;
+  background-color: white
+}
+
+.footerText {
+  /* background-color: #cecece; */
+  /* background-image: linear-gradient(to right, white, #cecece, white); */
+  padding: 0em 1em 0em 1em;
 }
 
 #footerText {
@@ -61,6 +77,7 @@
   border-style: solid;
   border-width: 1px;
   border-color: black;
+  border-radius: 1%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
   font-family: Verdana,sans-serif;
@@ -68,4 +85,15 @@
 
 #mainBodyDiv:hover {
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.fa {
+  font-size: 4.0em;
+  color: black;
+  padding: 1em;
+}
+.fa:hover {
+    color: darken(dark-gray, 25%);
+    transition: color 0.3s ease-in;
+  }
 }
