--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@
   margin-right: 1em;
 }
 
+.faviconLink {
+  color: black;
+}
+
 .mainBody {
   display: flex;
   width: 80%;
@@ -44,7 +48,25 @@
   margin-bottom: 5em;
 }
 
-.footerBox {
+.footerMaster {
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  border: 1px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  font-family: Verdana,sans-serif;
+  width: 100%;
+  height: 50px;
+  left: 0;
+  bottom: 0;
+  background-color: white
+}
+
+.footerSocialBox {
   display: flex;
   flex-direction: row;
   position: fixed;
@@ -61,7 +83,11 @@
   bottom: 0;
   text-align: center;
   justify-content: center;
-  background-color: white
+  background-color: white;
+}
+
+.footerSocialBox > .fa {
+  color: black;
 }
 
 .footerText {
@@ -92,20 +118,102 @@
 
 .fa {
   font-size: 4.0em;
-  color: black;
+  color: inherit;
   padding: 1em;
 }
+
 .fa:hover {
     color: darken(dark-gray, 25%);
     transition: color 0.3s ease-in;
-  }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    max-width: 1200px;
-    --primary-color: #455363;
-    --background-color: #1f2935;
-    --text-color: #fff;
-  }
+
+.dark-mode {
+  background-color: #15202B;
+  color: white;
+  border-top-color: white;
+}
+
+.dark-mode > .faviconLink {
+  color: white;
+}
+
+a {
+  color: inherit;
+}
+
+.toggleDarkText {
+  display: block;
+  float: left;
+  font-size: 13px;
+}
+
+.footerDarkMode {
+  position: absolute;
+  padding: 1em 0.5em;
+  right: 0;
+  justify-content: right;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 30px;
+  height: 17px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 13px;
+  width: 13px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(13px);
+  -ms-transform: translateX(13px);
+  transform: translateX(13px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 17px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
