--- a/style.css
+++ b/style.css
@@ -115,6 +115,17 @@ body {
   padding: 0em 1em 0em 1em;
 }
 
+.affirmationBox {
+  font-family: '8BITWONDERNominal';
+  font-weight: normal;
+  font-style: normal;
+  color: white;
+  background-color: black;
+  font-size: 14px;
+  padding: 0em 1em 0em 1em;
+
+}
+
 #footerText {
   text-align: center;
 }
