--- a/style.css
+++ b/style.css
@@ -53,7 +53,24 @@ body {
   align-items: center;
   justify-content: center;
   margin-bottom: 5em;
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: rgba(255, 255, 255, 0.84);
+}
+
+#mainBodyDiv {
+  padding: 2px 16px;
+  border: 1px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: black;
+  border-radius: 1%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  font-family: Verdana,sans-serif;
+  max-width: 80ch;
+}
+
+#mainBodyDiv:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
 }
 
 .footerInfoBox {
@@ -136,22 +153,6 @@ body {
 
 #footerText {
   text-align: center;
-}
-
-#mainBodyDiv {
-  padding: 2px 16px;
-  border: 1px;
-  border-style: solid;
-  border-width: 1px;
-  border-color: black;
-  border-radius: 1%;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  font-family: Verdana,sans-serif;
-}
-
-#mainBodyDiv:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
 }
 
 .fa {
