--- a/style.css
+++ b/style.css
@@ -47,13 +47,13 @@ body {
 .mainBody {
   display: flex;
   width: 80%;
-  margin: 10% 0 0 12%;
+  margin: 10% 0 0 10%;
   flex-direction: column;
   text-align: left;
   align-items: center;
   justify-content: center;
   margin-bottom: 5em;
-  background-color: rgba(255, 255, 255, 0.84);
+  max-width: 80wd;
 }
 
 #mainBodyDiv {
@@ -66,6 +66,7 @@ body {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   font-family: Verdana,sans-serif;
+  background-color: rgba(255, 255, 255, 0.90);
   max-width: 80ch;
 }
 
